# arc

./: .gitignore  CMakeLists.txt  README.md
examples/helloworld/: CMakeLists.txt  main.cpp
examples/opengl_2d/: CMakeLists.txt  main.cpp  utils.h
examples/opengl_2d/resources/: frag.frag  vert.vert
include/arc/: arc_body.h  arc_collider.h  arc_collision_detection.h  arc_object.h  arc_physics_world.h  arc_rigid_body.h  arc_solver.h
include/arc/colliders/: arc_aabb.h  arc_ray.h  arc_sphere.h
include/arc/math/: arc_transform.h  arc_vector.h
src/: arc_body.cpp  arc_collision_detection.cpp  arc_physics_world.cpp  arc_rigid_body.cpp  arc_solver.cpp
